Deliver M2: income sources and receipts, plan versions and buckets
Income sources (monthly, bi-weekly, weekly, one-off) with an active
period; receipts that freeze the FX rate and base amount at receipt
time (BR-09); irregular income as receipts without a source.

Plans are effective-dated versions with buckets in basis points.
Editing a later month closes the old version and starts a new one so
earlier months keep their percentages (FR-PLN-06). The over/under
warning states the gap in dinars and Rebalance scales shares to 100%.
A household's default 55/5/10/15/15 split is seeded server-side on
registration through the sync feed with a server clock.

Month windows honour the household start day. Month figures give
allocated, planned allocation, committed, spent and free per bucket.
Java and TypeScript implementations run the same month-window,
planned-income and month-figures vectors.

Web: Plan and Income screens, month picker, home plan summary, nav.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>